Ensure that GetPrinterInfo always returns a valid value.

Allowing GetPrinterInfo to return null was causing a crash if uris were
invalid.  However, excluding printers which have invalid uris make them
impossible to correct.

Bug: 779386
Change-Id: Ie5ebd8c3834a5d988f3f6d8a3cec7c2ea05dd9d6
Reviewed-on: https://chromium-review.googlesource.com/742308
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Dave Schuyler <dschuyler@chromium.org>
Commit-Queue: Sean Kau <skau@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522919}
Former-commit-id: 5cb0339fb2376e0096f41459e46ce41b51d66ac4