chrome/browser/ui/webui/settings/chromeos/cups_printers_handler.cc
@@ -83,7 +83,7 @@ void RecordIppQuerySuccess(bool success) {
   UMA_HISTOGRAM_BOOLEAN("Printing.CUPS.IppAttributesSuccess", success);
 }
 
-// Parsees |printer_uri| into its components and written into |uri|.  Returns
+// Parses |printer_uri| into its components and written into |uri|.  Returns
 // true if the uri was parsed successfully, returns false otherwise.  No changes
 // are made to |uri| if this function returns false.
 bool ParseUri(const std::string& printer_uri, PrinterUri* uri) {
@@ -181,9 +181,9 @@ std::string PrinterAddress(const std::string& host, int port) {
   return host;
 }
 
-// Returns a JSON representation of |printer| as a CupsPrinterInfo. Note it's
-// possible that this function returns a nullptr if the printer url is not in
-// the right format.
+// Returns a JSON representation of |printer| as a CupsPrinterInfo. If the
+// printer uri cannot be parsed, the relevant fields are populated with default
+// values.
 std::unique_ptr<base::DictionaryValue> GetPrinterInfo(const Printer& printer) {
   std::unique_ptr<base::DictionaryValue> printer_info =
       CreateEmptyPrinterInfo();
@@ -196,7 +196,13 @@ std::unique_ptr<base::DictionaryValue> GetPrinterInfo(const Printer& printer) {
 
   PrinterUri uri;
   if (!ParseUri(printer.uri(), &uri)) {
-    return nullptr;
+    // Uri is invalid so we set default values.
+    LOG(WARNING) << "Could not parse uri.  Defaulting values";
+    printer_info->SetString("printerAddress", "");
+    printer_info->SetString("printerQueue", "");
+    printer_info->SetString("printerProtocol",
+                            "ipp");  // IPP is our default protocol.
+    return printer_info;
   }
 
   if (base::ToLowerASCII(uri.scheme) == "usb") {
@@ -363,11 +369,9 @@ void CupsPrintersHandler::HandleGetCupsPrintersList(
 
   auto printers_list = base::MakeUnique<base::ListValue>();
   for (const Printer& printer : printers) {
-    // TODO(skau): Theoretically |printer_info| should not be a nullptr as we
-    // should not allow adding an invalid configured printer to PrinterManager.
-    auto printer_info = GetPrinterInfo(printer);
-    if (printer_info)
-      printers_list->Append(std::move(printer_info));
+    // Some of these printers could be invalid but we want to allow the user
+    // to edit them. crbug.com/778383
+    printers_list->Append(GetPrinterInfo(printer));
   }
 
   auto response = base::MakeUnique<base::DictionaryValue>();
@@ -816,14 +820,10 @@ void CupsPrintersHandler::OnPrintersChanged(
   std::unique_ptr<base::ListValue> printers_list =
       base::MakeUnique<base::ListValue>();
   for (const Printer& printer : automatic_printers_) {
-    auto printer_info = GetPrinterInfo(printer);
-    if (printer_info)
-      printers_list->Append(std::move(printer_info));
+    printers_list->Append(GetPrinterInfo(printer));
   }
   for (const Printer& printer : discovered_printers_) {
-    auto printer_info = GetPrinterInfo(printer);
-    if (printer_info)
-      printers_list->Append(std::move(printer_info));
+    printers_list->Append(GetPrinterInfo(printer));
   }
 
   FireWebUIListener("on-printer-discovered", *printers_list);
